--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!-- Add your site or application content here -->
     <div class="container">
 
-
+<div class="masthead"
 <ul class="nav primary">
 
     <li>
@@ -68,10 +68,67 @@
         <a href="http://www.google.com">link 3</a>
     </li>
 
-</ul>
+    <ul class="nav primary">
+         </ul>
+</nav>
+</div>
+
+<div class="masthead">
+<nav>
+
+        <!--MAIN CONTENT AREA
+        -->
+
+<main class="hold" role="main">
+
+    <article class="primary">
+        <header class="primary__header">
+            <h1 class="primary__heading">
+Page Heading
+            </h1>    
+
+        </header>
+<p>
+
+Occupy mixtape gastropub next level, Echo Park hella drinking vinegar selfies pug actually ugh farm-to-table literally fap. Asymmetrical master cleanse freegan mixtape, flannel seitan crucifix hoodie pug. Vegan try-hard flexitarian readymade. Tilde literally migas vinyl roof party. Stumptown cred squid, seitan wayfarers lumbersexual meditation salvia disrupt Marfa. Cliche slow-carb tattooed semiotics XOXO distillery YOLO tousled bitters. Ugh kale chips viral freegan vinyl.
+
+Wolf chillwave pork belly farm-to-table banjo cornhole. Meditation mixtape four dollar toast Odd Future salvia, lo-fi cray tilde try-hard ugh. Chia mumblecore messenger bag vegan church-key. Synth aesthetic salvia, direct trade Banksy banjo readymade Marfa DIY listicle Godard single-origin coffee four loko brunch. Health goth meditation McSweeney's cray pour-over Vice, Portland biodiesel mumblecore seitan gastropub sustainable Odd Future paleo. Roof party lumbersexual sriracha hella Banksy keffiyeh. Shabby chic fingerstache jean shorts pour-over freegan Kickstarter, mustache 8-bit ethical Wes Anderson.
+
+</p>
 
 
-        <p>Hello world!</p>
+</article>
+
+<aside class="secondary">
+
+        <ul class="nav page">
+
+    <li>
+        <a href="http://www.google.com">link 1</a>
+    </li>
+
+    <li>
+        <a href="http://www.google.com">link 2</a>
+    </li>
+
+    <li>
+        <a href="http://www.google.com">link 3</a>
+    </li>
+
+    <ul class="nav page">
+         </ul>
+
+</aside>
+
+      
+        </main>
+
+<!--END MAIN CONTENT AREA -->
+
+        <footer class="keel" role="contentinfo">
+        <p>(C) Hayley Frazier 2015
+        </footer>
+
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
